public/style.css
/* ... */
#geocoder{
    margin:0;  /*top, right, bottom, left    */
}

.esri-search {
    width: 230px !important;
}

.esri-search .esri-container .esri-input {
    height: 20px;
    width: 140px;
}
.esri-search .esri-search-button {
    padding: 6px 6px;
    height: 20px;
    width: 20px;
    border-left:0px;  		/* gets rid of search line seperator  */
}

#layersPanel  {
    position: absolute;
    top: 182px;
    right: 54px;
    width: 225px;
    color: #ccc;
    font-family: "Bebas Neue Regular", Verdana, sans-serif;
    /* font-family:  "Avenir LT W01 65 Medium", Arial, Helvetica, sans-serif !important;*/
    font-size: 20px;
    padding-left: 10px;
    padding-right: 6px;
    padding-top: 6px;
    padding-bottom: 4px;
    border-radius: 2px;
    z-index: 1;

}

.layer-panel-title{
    font-family: "Bebas Neue Regular", Verdana, sans-serif !important;
    font-size: 24px;
    text-decoration: underline;
    padding-left:8px;
    padding-top:2px;
    margin-top:0px;
    margin-bottom:8px
}

#searching-spinner  {
    margin: auto;
    width: 100px;
    left: 40%;
    top: 40%;
    border: 3px solid #73AD21;
    padding: 10px;
    z-index: 1;
    color: #ccc;
    font-family: 'Corbel Regular';
}
.spin::before {
    animation: 1.5s linear infinite spinner;
    animation-play-state: inherit;
    border: solid 5px #cfd0d1;
    border-bottom-color: #1c87c9;
    border-radius: 50%;
    content: "";
    height: 40px;
    width: 40px;
    position: absolute;
    top: 10%;
    left: 10%;
    transform: translate3d(-50%, -50%, 0);
    will-change: transform;
  }

#configPanel  {
    position: absolute;
    top: 230px;
    right: 54px;
    width: 230px;
    padding-left: 10px;
    padding-right: 6px;
    padding-top: 6px;
    padding-bottom: 14px;
    border-radius: 2px;
    z-index: 1;
    color: #ccc;
    font-family: 'Corbel Regular';
}
.smallnote {
    font-size: 80%;
    line-height: 80%;
    padding-bottom: 6px;
}
.srchnote {
    font-size: 80%;
    line-height: 100%;
    padding-bottom: 6px;
}

#configPanel p {
    font-family: "Bebas Neue Regular", Verdana, sans-serif !important;
    color: #ccc;
    font-size: 16px;
    margin: 6px 6px;
}

#resultsPanel  {
    position: absolute;
    top: 6px;
    right: 54px;
    width: 340px;
    padding-left: 10px;
    padding-right: 6px;
    padding-top: 6px;
    padding-bottom: 14px;
    border-radius: 2px;
    z-index: 1;
    color: #ccc;
    font-family: 'Corbel Regular';
}

#unitsrchPanel  {
    position: absolute;
    top: 280px;
    width: 230px;
    right: 54px;
    padding-left: 10px;
    padding-right: 6px;
    padding-top: 6px;
    padding-bottom: 14px;
    border-radius: 2px;
    z-index: 1;
    color: #ccc;
    font-family: 'Corbel Regular';
}

#map-table{
    height: 500px;
}


/*  hide the esri locate popup window always.. since it goes behind the layer buttons */
.esri-popup{
    display: none;
}

.hidden {
    display:none;
}



.zoom-in, .zoom-out {
    content: '';
}

.zoom-in {
    background-image: url(images/zoom-in.png);
}

.zoom-out {
    background-image: url(images/zoom-out.png);
}

.view-center {
    background-image: url(images/zoom-home.png);
}

.tilt {
    background-image: url(images/tilt-view.png);
}

.rotate {
    background-image: url(images/heading.png);
}


.leaflet-bottomleft a {
    position: absolute;
    left: 0;
    height: 45px;
    width: 51px;
    z-index: 99;
    cursor: pointer;
    border-top: 1px solid #666;
    background-repeat: no-repeat;
    background-position: center;
    opacity: 1;
}

.ugslogo {
    bottom: 140px;
    /* left: 4px !important; */
    height: 134px !important;
    /* width: 41px !important; */
    background-image: url(images/ugs-logo-vertical.png);
}

.help {
    bottom: 92px;
    background-image: url(images/help.png);
}

.bookstore {
    bottom: 46px;
    background-image: url(images/bookstore-link.png);
}

.comment {
    bottom: 0px;
    background-image: url(images/comment.png);
}

/* bottom right corner of map */
.ugs-watermark {
    position: absolute;
    bottom: 20px;
    right: 20px;
    height: 42px;
    width: 128px;
    z-index: 5;
    cursor: pointer;
    background-image: url(images/ugs-logo.png);
    background-repeat: no-repeat;
    opacity: 1;
}


/* 
.map-list {
    font-family: "Avenir Next W00","Helvetica Neue",Helvetica,Arial,sans-serif;
    display: block;
    width: 100%;
    height: 30px;
    padding: 0 .5em;
    font-size: 14px;
    line-height: 1.3em;
    background-color: white;
    color: #666666;
    border: none;
} 
*/

.map-layer {
    border-radius: 6px;
    padding: 2px;
    margin: 4px 0;
    background: #808080;
}
.greyedout::before {
    content: "|";
    /* background: rgb(146, 235, 173);
     outline: 1px solid red; */
     color: #ef8067;
}
.setactive::before {
    content: "|";
    color: #82a982;
}
.map-layer:hover {
    background: #8b8b8b;
    filter: drop-shadow(0 0 4px #3a3939);
}
.map-layer input[type="checkbox"] {
     margin-left:0; /*put closer to css line */
}

.esri-search .esri-search__container * {
    z-index: 99 !important;
}

.btn-sample {
  color: #000000;
  background-color: #F7F4F4;
  border-color: #CCCCCC;
}

.btn-sample:hover, .btn-sample:focus, .btn-sample:active, .btn-sample.active, .open .dropdown-toggle.btn-sample {
  color: #000000;
  background-color: #EFEDF2;
  border-color: #CCCCCC;
}

.btn {
    display: inline-block;
    padding: 6px 12px;
    font-size: 14px;
    line-height: 10pt;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    cursor: pointer;
    /* background: url("https://geology.utah.gov/apps/lance/mapbib/img/search-icon1.png") no-repeat scroll 0 0 transparent;  */
    border: 1px solid transparent;
    border-radius: 4px;
  }

.btn-sample:active, .btn-sample.active, .open .dropdown-toggle.btn-sample {
  background-image: none;
}
/* ... */

